<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012-2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">FM Radio</string>
    <string name="fmapp">FM Radio for Android</string>
    <string name="stations">FM Radio stations</string>
    <string name="lblversion">Version:</string>
    <string name="author">Made by:\n\nPedro Veloso (@pedronveloso) for the FreeXperia Project\nLayout concepts and art
        by Hairo The Blue Mage, dab512 and royale1223.
        \n\nBased upon the original work from Sony Ericsson Mobile Communications AB and Texas Instruments, Inc.
        \nBoth their code and this project is sporting the Apache 2.0 License, you can find this project source at
        https://github.com/CyanogenMod/android_hardware_ti_fmradio
    </string>
    <string name="app_rxhelp">About</string>
    <string name="statusMsg">Receiving\u2026</string>
    <string name="statusMsgStopped">Press seek button to start playing</string>
    <string name="app_rds">FM configuration</string>
    <string name="european">European</string>
    <string name="japanese">Japanese</string>
    <string name="freqRangeEurope" translatable="false">87.5 MHz - 108.0 MHz</string>
    <string name="freqRangeJapan" translatable="false">76 MHz - 90 MHz</string>
    <string name="label" translatable="false">kHz</string>
    <string name="labelhz" translatable="false">MHz</string>
    <string name="enterFreq_Dialog">Enter frequency</string>
    <string name="empty" translatable="false"></string>
    <string name="rdsmode">Enable RDS</string>
    <string name="configure_rds">Configure RDS</string>
    <string name="pref_rds_0sec">0 sec</string>
    <string name="pref_rds_50sec">50 sec</string>
    <string name="pref_rds_75sec">75 sec</string>
    <string name="pref_rds_stereo">Stereo</string>
    <string name="pref_rds_mono">Mono</string>
    <string name="pref_rds_is_disabled">RDS is disabled</string>
    <string name="pref_rds_invalid_rssi">Enter a valid RSSI value in range 1-127!</string>
    <string name="preferences">Preferences</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="rdsaf">Enable RDS AF</string>
    <string name="setfreq">Set frequency</string>
    <string name="rssi">RSSI:</string>
    <string name="band">Band:</string>
    <string name="mode">Mode:</string>
    <string name="deemphasis">DeEmp filter:</string>
    <string name="rdssystem">RDS system:</string>
    <string name="number">Enter a valid number</string>
    <string name="seeking">Seeking\u2026</string>
    <string name="playing">Playing</string>
    <string name="index">Index</string>
    <string name="freq">Freq.</string>
    <string name="name" translatable="false">""</string>
    <string name="channelSpace">Ch. space</string>
    <string name="confirm_action">Confirm action</string>

    <!-- Main UI -->
    <string name="cannot_enable_radio">Cannot enable Radio!</string>
    <string name="please_wait">Please wait</string>
    <string name="powering_radio">Powering on Radio\u2026</string>
    <string name="not_able_to_tune">Unable to tune!</string>
    <string name="not_able_enable_rds">Cannot enable RDS!</string>
    <string name="not_able_disable_rds">Cannot disable RDS!</string>
    <string name="not_able_to_set_mode">Unable to set mode!</string>
    <string name="not_able_to_setband">Unable to set band!</string>
    <string name="not_able_to_setmute">Unable to set mute!</string>
    <string name="not_able_to_seek_up">Unable to seek up!</string>
    <string name="not_able_to_seek_down">Unable to seek down!</string>
    <string name="not_able_to_setband_to_value">Cannot set band to selected value!</string>
    <string name="not_able_to_set_deemp_filter_to_value">Cannot set DeEmp filter to selected value!</string>
    <string name="not_able_to_set_channel_spacing_to_value">Cannot set channel spacing to selected value!</string>
    <string name="not_able_to_set_rds_to_value">Cannot set RDS system to selected value!</string>
    <string name="not_able_to_set_rds_af_on">Cannot enable RDS AF mode!</string>
    <string name="not_able_to_set_rssi_threshold">Unable to set RSSI threshold!</string>
    <string name="error_in_fm_app">Error in FM application</string>
    <string name="applying_new_config">Applying new configuration</string>
    <string name="empty_text">(Empty)</string>
    <string name="choose_station_name">What\'s this station called?</string>
    <string name="add_station">Add new station</string>
    <string name="operations">Operations</string>
    <string name="edit_station">Edit station</string>
    <string name="remove_station">Remove station</string>
    <string name="confirm_action_remove_station">Are you sure you want to remove this station:</string>
    <string name="earphones_not_plugged">Earphones not plugged-in. Please plug them in before starting this application.</string>

    <!-- Tune Screen -->
    <string name="valid_frequency">Enter a valid frequency</string>

    <!-- Content Description -->
    <string name="seek_up">Seek up</string>
    <string name="seek_down">Seek down</string>
    <string name="close_notification">Close notification</string>

    <!-- Preferences -->
    <string name="general_preferences">General</string>
    <string name="pref_use_rds_instead_title">Notification preset</string>
    <string name="pref_use_rds_instead">Use preset name in notification instead of RDS value</string>
    <string name="pref_notification_bar_title">Notifications</string>
    <string name="pref_notification_bar">Use notification bar controls</string>
    <string name="pref_print_debug_info_title">Debug info</string>
    <string name="pref_print_debug_info">Print debug information to logcat (requires restart of app)</string>
</resources>
