<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012-2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="50dip">

                <CheckBox
                        android:id="@+id/chbRdsmode"
                        android:text="@string/rdsmode"
                        style="@style/preferencesTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"/>

                <CheckBox
                        android:id="@+id/chbSetRdsAf"
                        android:text="@string/rdsaf"
                        style="@style/preferencesTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="30dip"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:layout_marginTop="10dip">

                <TextView
                        android:id="@+id/txtRdsSystem"
                        android:text="@string/rdssystem"
                        style="@style/preferencesTextStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="15dip"/>

                <Spinner
                        android:id="@+id/spnRdsSystem"
                        style="@style/preferencesTextStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="15dip"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/widget170"
                    android:layout_width="fill_parent"
                    android:layout_height="50dip">

                <TextView
                        android:id="@+id/txtBand"
                        android:text="@string/band"
                        style="@style/preferencesTextStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="15dip"/>

                <Spinner
                        android:id="@+id/spnBand"
                        style="@style/preferencesTextStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="15dip"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dip">

                <TextView
                        android:id="@+id/txtMode"
                        android:text="@string/mode"
                        style="@style/preferencesTextStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="15dip"/>

                <Spinner
                        android:id="@+id/spnMode"
                        style="@style/preferencesTextStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="15dip"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dip">

                <TextView
                        android:text="@string/deemphasis"
                        style="@style/preferencesTextStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="50dip"
                        android:layout_weight="1"
                        android:layout_marginLeft="15dip"/>

                <Spinner
                        android:id="@+id/spnEmp"
                        style="@style/preferencesTextStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="15dip"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/widget173"
                    android:layout_width="fill_parent"
                    android:layout_height="50dip">

                <TextView
                        android:id="@+id/txtChannelSpacing"
                        android:text="@string/channelSpace"
                        style="@style/preferencesTextStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="15dip"/>

                <Spinner
                        android:id="@+id/spnChannelSpace"
                        style="@style/preferencesTextStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="15dip"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:paddingRight="10dip">

                <TextView
                        android:id="@+id/txtRssi"
                        android:text="@string/rssi"
                        style="@style/preferencesTextStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="15dip"/>

                <EditText
                        android:id="@+id/Rssi"
                        android:text="@string/empty"
                        style="@style/preferencesTextStyle"
                        android:inputType="numberDecimal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dip"
                        android:layout_marginRight="8dip"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip">

        <Button
                android:id="@+id/btnOk"
                android:text="@android:string/ok"
                style="@style/preferencesTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"/>

        <Button
                android:id="@+id/btnCancel"
                android:text="@android:string/cancel"
                style="@style/preferencesTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
